environments/gloo-gateway/gateway-api/live/rollouts-demo/strategies/blue-green/base/rollouts-demo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rollouts-demo
  namespace: rollouts-demo
spec:
  hostnames:
  - "rollouts-demo.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: rollouts-demo-active
          port: 8080
        - name: rollouts-demo-preview
          port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: rollouts-demo-route-policies
